<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alertDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:padding="8dp"

        android:gravity="center"

        android:text="@string/alert_dialog_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/colorPrimary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/alertDialogComment"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPersonName"
        android:hint="@string/comment_hint"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/alertDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alertDialogBoxCANCEL"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/alert_dialog_box_cancel"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/alertDialogComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/alertDialogBoxOK"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alertDialogBoxOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/alert_dialog_box_ok"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/alertDialogComment"
        app:layout_constraintStart_toEndOf="@id/alertDialogBoxCANCEL"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>